--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "harsh-reset",
   "version": "1.0.0",
-  "description": "An opinionated css reset",
+  "description": "An opinionated css reset for websites/webapps.",
   "main": "reset.scss",
   "style": "reset.scss",
   "scripts": {
